k8s/apps/base/keycloak/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
    - kind: Gateway
      name: reverse-proxy
      namespace: envoy-gateway-system
  hostnames:
    - "keycloak.${DOMAIN}"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: primary-service
          namespace: keycloak
          port: 8080
